# jibu-transformhub-support

./: .env.example  .gitignore  README.md  app.py  handwritten-sales-transactions-parser.ipynb  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/: index.html
src/: App.vue  main.ts  router.ts  store.ts
src/components/: WebCam.vue
src/lib/: image-processing.ts
src/pages/: CameraPreview.vue  ExtractedDataPreview.vue  Home.vue  PhotoAdjustCrop.vue  ScanPreview.vue
