[tool.poetry]
name = "jibu-transformhub-support"
version = "0.1.0"
description = ""
authors = ["Merbin J Anselm <merbin.j.anselm@sap.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
