[tool.poetry]
name = "jibu-transformhub-support"
version = "0.1.0"
description = ""
authors = ["Merbin J Anselm <merbin.j.anselm@sap.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
boto3 = "^1.35.82"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
